# gbp-notifications

./: Makefile  README.md  noxfile.py  pyproject.toml
src/gbp_notifications/: __init__.py  apps.py  exceptions.py  settings.py  signals.py  tasks.py  types.py  utils.py  worker.py
src/gbp_notifications/methods/: __init__.py  email.py  pushover.py  webhook.py
src/gbp_notifications/templates/: __init__.py  email_build_published.eml  pulled.eml
tests/: __init__.py  __main__.py  fixtures.py  lib.py  runtests.py  settings.py  test_core.py  test_domain.py  test_methods.py  test_methods_email.py  test_methods_pushover.py  test_methods_webhook.py  test_settings.py  test_signals.py  test_tasks.py  test_templates.py  test_types.py  test_utils.py  test_worker.py
