[project]
name = "gbp-notifications"
version = "0.1.0"
description = ""
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3+"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
